# HumanRadar_M5Stack

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  QUICK_START.md  RADAR_DISPLAY_README.md  RADAR_SWEEP_README.md  README.md  partitions.csv  platformio.ini  sdkconfig  sdkconfig 2.old  sdkconfig.bsp.esp-box  sdkconfig.bsp.esp-box.old  sdkconfig.bsp.m5stack_core  sdkconfig.defaults  sdkconfig.old
.claude/: settings.local.json
components/humanRadarRD_03D/: README.md  humanRadarRD_03D.c
components/humanRadarRD_03D/include/: humanRadarRD_03D.h
doc/: event.html  uri.json
main/: CMakeLists.txt  Kconfig.projbuild  audio.c  http_listener.c  http_requester.c  idf_component.yml  lvgl_demo_ui.c  main.c  mmwave.c  ui_page01.c  ui_radar_display.c  ui_radar_display.h  ui_radar_display_example.c  ui_radar_integration.c  ui_radar_integration.h  ui_radar_sweep.c  ui_radar_sweep.h
spiffs/: config.json
